--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         </div>
 
         <div class="row row-cols-4 mt-4">
-          <div class="col justify-content-center text-center">
+          <div class="col justify-content-center text-center" v-for="(item, index) in menu" :key="index">
             <div class="d-flex flex-column item">
-              <img class="w-100" src="./images/pizza-1.png" alt="BISMARCK">
+              <img class="w-100" :src="`./images/${ item.image }`" :alt="item.name">
               <div class="p-3">
-                <h5 class="item-name">BISMARCK</h5>
-                <h6 class="item-price">$30.00</h6>
-                <button type="button" class="add-cart">Add to Cart</button>
+                <h5 class="item-name">{{ item.name }}</h5>
+                <h6 class="item-price">${{ item.price }}</h6>
+                <button type="button" class="add-cart" @click="addPizza(item.id)">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -53,10 +53,35 @@
           Your Basket
         </h3>
 
-        <div class="order-items">
-          
+        <div class="order-items" v-if="cart.length > 0">
+          <div class="order-item mb-4" v-for="(item, index) in cart" :key="index">
+            <img :src="`./images/${ item.image }`" alt="item.name" class="order-item-img">
+            <div class="order-item-content">
+              <h5>
+                {{item.name}} = ${{item.price.toFixed(2)}}
+              </h5>
+
+              <p>
+                <button type="button" class="add" @click="addPizza(item.id)">+</button>
+                {{item.quantity}}
+                <button type="button" class="remove" @click="reducePizza(item.id)">-</button>
+              </p>
+
+              <div class="order-item-details">
+                <span>
+                  <strong>Calories:</strong> {{item.calories}}
+                </span>
+                <span>
+                  <strong>Fats:</strong> {{item.fats}}
+                </span>
+              </div>
+            </div>
+
+            <button type="button" class="remove-icon" @click="removePizza(item.id)">x</button>
+          </div>
+
         </div>
-        <div class="cart-empty">
+        <div class="cart-empty" v-else>
           <p class="text-center">
             Your basket is empty
           </p>
@@ -65,14 +90,14 @@
         <div class="total-section">
           <h6 class="total-title">Total payment:</h6>
           <span class="amount">
-            $0
+            {{ getTotalPrice() }}
           </span>
         </div>
       </div>
     </div>
   </div>
 
-  <script src="https://unpkg.com/vue@3"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="./main.js"></script>
 
 </body>
